--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
+    "@ctrl/tinycolor": "^4.1.0",
+    "ng-zorro-antd": "^18.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
