--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
               }
             ],
             "styles": [
+              "node_modules/ng-zorro-antd/src/ng-zorro-antd.min.css",
               "src/theme.less",
               "src/styles.scss"
             ],
@@ -107,6 +108,24 @@
               "src/styles.scss"
             ],
             "scripts": []
+          }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "schess-frontend:build",
+            "compodoc": false,
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": ".storybook",
+            "browserTarget": "schess-frontend:build",
+            "compodoc": false,
+            "outputDir": "storybook-static"
           }
         }
       }
