--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run schess-frontend:storybook",
+    "build-storybook": "ng run schess-frontend:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -28,13 +30,27 @@
     "@angular-devkit/build-angular": "^18.2.19",
     "@angular/cli": "~18.2.19",
     "@angular/compiler-cli": "^18.2.13",
+    "@storybook/addon-docs": "^9.0.14",
+    "@storybook/addon-onboarding": "^9.0.14",
+    "@storybook/angular": "^9.0.14",
+    "@types/chai": "^5.2.2",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^20.8.10",
+    "@types/webpack": "^5.28.1",
+    "chai": "^5.2.0",
+    "css-loader": "^7.1.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.4.5"
+    "less": "^4.3.0",
+    "less-loader": "^12.3.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "storybook": "^9.0.14",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.4.5"
   }
 }
